# state_machine_module

./: .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json
src/: CMakeLists.txt  state_machine.c  state_machine.h
test/: CMakeLists.txt  main.c  main.h  transitions.c  transitions.h
test/fault/: fault.c
test/protect/: charge_protect.c  discharge_protect.c  protect.c
test/run/: boot.c  charge.c  discharge.c  precharge.c  run.c  standby.c
test/sleep/: sleep.c
